--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^5.3.1"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "three": "^0.166.1"
   }
 }
