--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^5.3.1"
   },
   "dependencies": {
-    "gh-pages": "^6.1.1",
     "three": "^0.166.1"
   }
 }
